--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,20 @@
 #container a {
   text-decoration: none;
 }
+div{
+  text-align: center;
+}
+input{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: center;
+}
+button {
+  background-color: blue;
+  height: 30px;
+  width: auto;
+  font-size: 15px;
+  border-radius: 50px;
+  position: absolute;
+  right: 20px;
+}
